// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/button/demo/basic.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-danger"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/block.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary ant-btn-block"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-block"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-block"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-danger ant-btn-block"
    type="button"
  >
    <span>
      danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/button-group.md correctly 1`] = `
<div>
  <h4>
    Basic
  </h4>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        OK
      </span>
    </button>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn"
      disabled=""
      type="button"
    >
      <span>
        L
      </span>
    </button>
    <button
      class="ant-btn"
      disabled=""
      type="button"
    >
      <span>
        M
      </span>
    </button>
    <button
      class="ant-btn"
      disabled=""
      type="button"
    >
      <span>
        R
      </span>
    </button>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        L
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        M
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        R
      </span>
    </button>
  </div>
  <h4>
    With Icon
  </h4>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#left"
          />
        </svg>
      </i>
      <span>
        Go back
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Go forward
      </span>
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
    </button>
  </div>
  <div
    class="ant-btn-group"
  >
    <button
      class="ant-btn ant-btn-primary ant-btn-icon-only"
      type="button"
    >
      <i
        aria-label="icon: cloud"
        class="anticon anticon-cloud"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#cloud"
          />
        </svg>
      </i>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-icon-only"
      type="button"
    >
      <i
        aria-label="icon: cloud-download"
        class="anticon anticon-cloud-download"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#cloud-download"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/disabled.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      Primary(disabled)
    </span>
  </button>
  <br />
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn"
    disabled=""
    type="button"
  >
    <span>
      Default(disabled)
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed"
    disabled=""
    type="button"
  >
    <span>
      Dashed(disabled)
    </span>
  </button>
  <div
    style="padding:8px 8px 0 8px;background:rgb(190, 200, 200)"
  >
    <button
      class="ant-btn ant-btn-background-ghost"
      type="button"
    >
      <span>
        Ghost
      </span>
    </button>
    <button
      class="ant-btn ant-btn-background-ghost"
      disabled=""
      type="button"
    >
      <span>
        Ghost(disabled)
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/button/demo/ghost.md correctly 1`] = `
<div
  style="background:rgb(190, 200, 200);padding:26px 16px 16px"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-background-ghost"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-background-ghost"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-background-ghost"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-danger ant-btn-background-ghost"
    type="button"
  >
    <span>
      danger
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/icon.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
    <span>
      Search
    </span>
  </button>
  <button
    class="ant-btn ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
    <span>
      Search
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
    <span>
      Search
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
  </button>
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <i
      aria-label="icon: search"
      class="anticon anticon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#search"
        />
      </svg>
    </i>
    <span>
      Search
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/loading.md correctly 1`] = `
<span>
  <button
    class="ant-btn ant-btn-primary ant-btn-loading"
    type="button"
  >
    <i
      aria-label="icon: loading"
      class="anticon anticon-loading"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#loading"
        />
      </svg>
    </i>
    <span>
      Loading
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-sm ant-btn-loading"
    type="button"
  >
    <i
      aria-label="icon: loading"
      class="anticon anticon-loading"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#loading"
        />
      </svg>
    </i>
    <span>
      Loading
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <i
      aria-label="icon: poweroff"
      class="anticon anticon-poweroff"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#poweroff"
        />
      </svg>
    </i>
    <span>
      Click me!
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-btn-circle ant-btn-loading"
    type="button"
  >
    <i
      aria-label="icon: loading"
      class="anticon anticon-loading"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#loading"
        />
      </svg>
    </i>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-loading"
    type="button"
  >
    <i
      aria-label="icon: loading"
      class="anticon anticon-loading"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#loading"
        />
      </svg>
    </i>
  </button>
</span>
`;

exports[`renders ./components/button/demo/multiple.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      primary
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      secondary
    </span>
  </button>
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      Actions 
    </span>
    <i
      aria-label="icon: down"
      class="anticon anticon-down"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#down"
        />
      </svg>
    </i>
  </button>
</div>
`;

exports[`renders ./components/button/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <button
    class="ant-btn ant-btn-primary ant-btn-lg"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-lg"
    type="button"
  >
    <span>
      Normal
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-lg"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-danger ant-btn-lg"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
  <br />
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
    type="button"
  >
    <i
      aria-label="icon: download"
      class="anticon anticon-download"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#download"
        />
      </svg>
    </i>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-round ant-btn-lg"
    type="button"
  >
    <i
      aria-label="icon: download"
      class="anticon anticon-download"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#download"
        />
      </svg>
    </i>
    <span>
      Download
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary ant-btn-lg"
    type="button"
  >
    <i
      aria-label="icon: download"
      class="anticon anticon-download"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#download"
        />
      </svg>
    </i>
    <span>
      Download
    </span>
  </button>
  <br />
  <div
    class="ant-btn-group ant-btn-group-lg"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <i
        aria-label="icon: left"
        class="anticon anticon-left"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#left"
          />
        </svg>
      </i>
      <span>
        Backward
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Forward
      </span>
      <i
        aria-label="icon: right"
        class="anticon anticon-right"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#right"
          />
        </svg>
      </i>
    </button>
  </div>
</div>
`;
